kubernetes/memcached.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
spec:
  selector:
    matchLabels:
      app: memcached
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
      - image: memcached
        name: memcached
        resources: {}
        volumeMounts:
          - mountPath: /data
            name: memcachedvolume
        ports:
        - containerPort: 11211
      restartPolicy: Always
      volumes:
        - name: memcachedvolume
          persistentVolumeClaim:
            claimName: pci-opendebates-testing-memcached
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
  labels:
    app: memcached
spec:
  ports:
    - port: 11211
  selector:
    app: memcached
