kubernetes/redis.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: redis
    spec:
      containers:
      - image: redis
        name: redis
        resources: {}
        volumeMounts:
          - mountPath: /data
            name: redisvolume
      restartPolicy: Always
      volumes:
        - name: redisvolume
          persistentVolumeClaim:
            claimName: pci-opendebates-testing-redis

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
---
